# DL-DiReCT

./: LICENSE  README.md  batch-dl+direct.sh  citations.bib  direct  direct.sh  dl+direct  dl+direct.sh  fast_surface_reconstruction.sh  pyproject.toml  setup.py
doc/: cite.md  faq.md
src/: DeepSCAN_Anatomy_Newnet_apply.py  DeepSCAN_labels_aseg_aparc.py  DiReCT.py  bet.py  conform.py  crop.py  deepscan_lut.csv  dl_wm_surface_parallel_dev.py  extract_morphometrics.py  extract_stats.py  fs_color.csv  fs_lut.csv  preparedata.py  radiomics2table.py  radiomics_extractor.py  run_script.py  smooth_pial.py  stats2table.py
